# godzilla

./: .buildinfo  .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  .lgtm.yml  .licenserc.json  .readthedocs.yaml  .readthedocs.yml  CITATION.cff  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  app.mk  genindex.html  godzilla.pc.in  index.html  objects.inv  run_tests  search.html  searchindex.js  testroot
contrib/muParser/: CMakeLists.txt
docs/: CMakeLists.txt  Doxyfile.in  conf.py  conf.py.in  doxyrest-config.lua.in  environment.yml  index.rst  parameters.py  requirements.txt  rtd-requirements.txt
docs/devel/classes/: array-1d.rst  boundary-condition.rst  bounding-box.rst  box-mesh.rst  command-line-interface.rst  constant-ic.rst  constant-initial-condition.rst  csv-output.rst  delegate.rst  dense-matrix.rst  dense-vector.rst  discrete-problem-interface.rst  dynamic-library.rst  essential-bc.rst  exception.rst  exodusii-mesh.rst  exodusii-output.rst  explicit-fe-linear-problem.rst  explicit-fv-linear-problem.rst  factory.rst  fe-nonlinear-problem.rst  fe-problem-interface.rst  file-mesh.rst  function-ic.rst  fv-problem-interface.rst  hdf5-output.rst  implicit-fe-nonlinear-problem.rst  index-set.rst  input-file.rst  line-mesh.rst  matrix.rst  mesh.rst  natural-bc.rst  natural-riemann-bc.rst  nonlinear-problem.rst  (+9 more)
docs/examples/: heat-eqn.rst  poisson.rst
docs/getting-started/: install.rst
examples/advect-eqn/: CMakeLists.txt
examples/burgers-eqn/: CMakeLists.txt
examples/heat-eqn/: CMakeLists.txt
examples/ns-incomp/: CMakeLists.txt
examples/poisson/: CMakeLists.txt
src/: App.cpp  AppObjects.cpp  AuxiliaryField.cpp  BasicTSAdapt.cpp  BndJacobianFunc.cpp  BndResidualFunc.cpp  BoundaryCondition.cpp  BoxMesh.cpp  CMakeLists.txt  CSVOutput.cpp  CallStack.cpp  CmdLineArgParser.cpp  CommandLineInterface.cpp  ConstantAuxiliaryField.cpp  ConstantFunction.cpp  ConstantIC.cpp  ConstantInitialCondition.cpp  Convert.cpp  DGProblemInterface.cpp  DependencyEvaluator.cpp  DirichletBC.cpp  DiscreteProblemInterface.cpp  DynamicLibrary.cpp  Edge.cpp  Element.cpp  Error.cpp  EssentialBC.cpp  Exception.cpp  Executioner.cpp  ExodusIIMesh.cpp  ExodusIIOutput.cpp  ExodusIO.cpp  ExplicitDGLinearProblem.cpp  ExplicitFELinearProblem.cpp  ExplicitFVLinearProblem.cpp  ExplicitProblemInterface.cpp  Extension.cpp  FELinearProblem.cpp  FENonlinearProblem.cpp  FEProblemInterface.cpp  (+142 more)
src/base/: App.cpp  CallStack.cpp  Factory.cpp  GFunctionInterface.cpp  GPrintInterface.cpp  GodzillaApp.cpp  GodzillaError.cpp  GodzillaInit.cpp  Init.cpp  Object.cpp  godzillaApp.C
src/executioners/: GExecutioner.cpp
src/grids/: G1DLineMesh.cpp  G2DRectangleMesh.cpp  G2DStructuredGrid.cpp  GExodusIIMesh.cpp  GGrid.cpp  GMesh.cpp  GUnstructuredMesh.cpp
src/input/: CmdLineArgParser.cpp  GYMLFile.cpp  GYMLParser.cpp
src/mesh/: G1DLineMesh.cpp  G2DRectangleMesh.cpp  GExodusIIMesh.cpp  GMesh.cpp
src/outputs/: GOutput.cpp  GVTKOutput.cpp
src/problems/: GFENonlinearProblem.cpp  GLinearProblem.cpp  GNonlinearProblem.cpp  GPetscFENonlinearProblem.cpp  GPetscFeProblem.cpp  GPetscLinearProblem.cpp  GPetscNonlinearProblem.cpp  GProblem.cpp
src/utils/: InputParameters.cpp  Utils.cpp
test/: CMakeLists.txt  main.cpp
test/assets/: 2blk.exo  funcs.yml  grid_missing_req_param.yml  grid_no_type.yml  grid_partitioner.yml  grid_unreg_type.yml  malformed.yml  mesh_no_type.yml  mesh_partitioner.yml  no_type.yml  nonfe_with_auxs.yml  nonfe_with_bcs.yml  nonfe_with_ics.yml  not_map.yml  param_types.yml  simple-test.yml  simple.yml  simple_fe.yml  simple_fe_pps.yml  simple_fe_w_aux.yml  simple_vec_as_scalars.yml  square.e  ss_with_ts_adapt.yml  unreg_type.yml  vec_as_scalars.yml  wrong_param_type.yml  wrong_type_bool.yml
test/common/: FENonlinearProblem_test.h  GTest2FieldsFENonlinearProblem.cpp  GTest2FieldsFENonlinearProblem.h  GTestDGLinearProblem.cpp  GTestDGLinearProblem.h  GTestFENonlinearProblem.cpp  GTestFENonlinearProblem.h  GTestImplicitFENonlinearProblem.cpp  GTestImplicitFENonlinearProblem.h  GodzillaApp_test.h  ImplicitFENonlinearProblem_test.h  TestApp.cpp  TestApp.h  TestMesh1D.cpp  TestMesh1D.h  TestMesh2D.cpp  TestMesh2D.h  TestMesh3D.cpp  TestMesh3D.h
test/ext/: CMakeLists.txt  main.cpp
test/include/: BoundaryCondition_test.h  BoxMesh_test.h  CSVOutput_test.h  Executioner_test.h  ExodusIIMesh_test.h  ExodusIIOutput_test.h  FENonlinearProblem_test.h  G1DLineMesh_test.h  G1DStructuredGrid_test.h  G2DRectangleMesh_test.h  G2DStructuredGrid_test.h  GExecutioner_test.h  GExodusIIMesh_test.h  GLinearProblem_test.h  GNonlinearProblem_test.h  GPrintInterface_test.h  GTest2FieldsFENonlinearProblem.h  GTestFENonlinearProblem.h  GTestImplicitFENonlinearProblem.h  GVTKOutput_test.h  GYMLFile_test.h  GodzillaApp_test.h  HDF5Output_test.h  ImplicitFENonlinearProblem_test.h  LineMesh_test.h  LinearProblem_test.h  NonlinearProblem_test.h  Output_test.h  PiecewiseLinear_test.h  PrintInterface_test.h  RectangleMesh_test.h  Steady_test.h  StructuredGrid1D_test.h  StructuredGrid2D_test.h  TestApp.h  VTKOutput_test.h
test/src/: App_test.cpp  Array1D_test.cpp  Array2D_test.cpp  Array_test.cpp  AssemblyList_test.cpp  AuxiliaryField_test.cpp  BasicTSAdapt_test.cpp  BndJacobianFunc_test.cpp  BndResidualFunc_test.cpp  BoundaryCondition_test.cpp  BoxMesh_test.cpp  CMakeLists.txt  CSVOutput_test.cpp  CSVOutput_test.h  CallStack_test.cpp  ConstantAuxiliaryField_test.cpp  ConstantFunction_test.cpp  ConstantIC_test.cpp  Convert_test.cpp  DenseMatrixSymm_test.cpp  DenseMatrix_test.cpp  DenseVector_test.cpp  DependencyEvaluator_test.cpp  DependencyGraph_test.cpp  Determinant_test.cpp  DirichletBC_test.cpp  DynamicLibrary_test.cpp  Edge_test.cpp  Error_test.cpp  EssentialBC_test.cpp  EssentialBoundaryInfo_test.cpp  ExceptionTestMacros.h  Exception_test.cpp  Executioner_test.cpp  ExodusIIMesh_test.cpp  ExodusIIOutput_test.cpp  ExodusII_test.cpp  Expected_test.cpp  ExplicitFELinearProblem_test.cpp  ExplicitFENonlinearProblem_test.cpp  (+154 more)
tools/mesh-part/: CMakeLists.txt  main.cpp
(+717 files in other folders)
