add_executable(${PROJECT_NAME}
    AuxiliaryField_test.cpp
    BoundaryCondition_test.cpp
    BoxMesh_test.cpp
    CallStack_test.cpp
    ConstantIC_test.cpp
    CSVOutput_test.cpp
    DirichletBC_test.cpp
    Error_test.cpp
    EssentialBC_test.cpp
    ExodusIIMesh_test.cpp
    ExodusIIOutput_test.cpp
    ExplicitFENonlinearProblem_test.cpp
    Factory_test.cpp
    FENonlinearProblem_test.cpp
    FunctionAuxiliaryField_test.cpp
    FunctionEvaluator_test.cpp
    FunctionIC_test.cpp
    GodzillaApp_test.cpp
    GTestFENonlinearProblem.cpp
    GTest2FieldsFENonlinearProblem.cpp
    GTestImplicitFENonlinearProblem.cpp
    GYMLFile_test.cpp
    HDF5Output_test.cpp
    ImplicitFENonlinearProblem_test.cpp
    InitialCondition_test.cpp
    InputParameters_test.cpp
    L2Diff_test.cpp
    LinearInterpolation_test.cpp
    LinearProblem_test.cpp
    LineMesh_test.cpp
    Logger_test.cpp
    MeshPartitioningOutput_test.cpp
    NaturalBC_test.cpp
    NonlinearProblem_test.cpp
    Object_test.cpp
    Output_test.cpp
    ParsedFunction_test.cpp
    PiecewiseLinear_test.cpp
    PrintInterface_test.cpp
    Problem_test.cpp
    RectangleMesh_test.cpp
    Terminal_test.cpp
    TimeSteppingAdaptor_test.cpp
    UnstructuredMesh_test.cpp
    Utils_test.cpp
    Validation_test.cpp
    VTKOutput_test.cpp
    main.cpp
)
target_code_coverage(${PROJECT_NAME})
target_sanitization(${PROJECT_NAME})

target_include_directories(
    ${PROJECT_NAME}
    PUBLIC
        ${PROJECT_SOURCE_DIR}/include
        ${CMAKE_BINARY_DIR}
        ${CMAKE_SOURCE_DIR}/include
        ${CMAKE_SOURCE_DIR}/contrib
)

target_link_libraries(
    ${PROJECT_NAME}
    PUBLIC
        godzilla
        Boost::filesystem
        gtest_main
        gmock_main
)

set_target_properties(${PROJECT_NAME} PROPERTIES BUILD_RPATH ${Boost_LIBRARY_DIRS})
